--- a/default_parameters.yaml
+++ b/default_parameters.yaml
@@ -5,7 +5,8 @@ default-parameters:
   model: "GCN"
   epochs_target: 20
   epochs_shadow: 20
-  experiments: 1
+  experiment: "query"
+  num_experiments: 1
   hidden_dim_target: [64]
   query_hops: [0]
   target_fpr: 0.01
